Fix font and button colors on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -296,7 +296,6 @@ p.task-item {
   margin: 1rem 1rem 0;
   font-size: 0.75rem;
   color: black;
-  background-color: transparent;
   text-decoration: underline;
 }
 
